objects/tNPS_Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>BU_Name__c</fullName>
        <label>BU Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>VOC_Survey_ResponsetNPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>tNPS Survey Response</relationshipLabel>
        <relationshipName>tNPS_Survey_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Long_Text_1__c</fullName>
        <label>Question Long Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Long_Text_2__c</fullName>
        <label>Question Long Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Long_Text_3__c</fullName>
        <label>Question Long Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text_10__c</fullName>
        <label>Question 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text_1__c</fullName>
        <label>Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Text_2__c</fullName>
        <label>Question 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_10__c</fullName>
        <label>Response 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_1__c</fullName>
        <label>Response 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_2__c</fullName>
        <label>Response 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Long_Text_1__c</fullName>
        <label>Response Long Text 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Long_Text_2__c</fullName>
        <label>Response Long Text 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Long_Text_3__c</fullName>
        <label>Response Long Text 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>